--- a/Css/Style.css
+++ b/Css/Style.css
@@ -1,1 +1,33 @@
 /* General */
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background-color: #787878;
+    font-family: Arial, Helvetica, sans-serif;
+}
+/* header */
+
+header{
+    background-color: white;
+    height: 90px;
+}
+
+.logo-container{
+    box-sizing: border-box;
+    height: 100px;
+    line-height: 100px;
+    margin-left: 20px;
+}
+
+.logo{
+    vertical-align: middle;
+}
+
+h1{display: inline;
+    font-weight: 700;
+    vertical-align: top;
+    font-size: 40px;
+}
