--- a/Css/Style.css
+++ b/Css/Style.css
@@ -1,4 +1,5 @@
 /* General */
+
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +9,21 @@ body{
     background-color: #787878;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.container{
+    width: 60%;
+    height: 980px;
+    margin: 50px auto;
+    background-color: white;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+main{
+    margin-left: 50px;
+}
+
 /* header */
 
 header{
@@ -30,4 +46,48 @@ h1{display: inline;
     font-weight: 700;
     vertical-align: top;
     font-size: 40px;
+}
+
+/* Adder */
+
+.adder{
+    display: inline-block;
+    box-sizing: border-box;
+    background-color: white;
+    height: 60px;
+    margin-left: 50px;
+}
+
+#task{
+    background-color: dodgerblue;
+    color: white;
+    border-radius: 5px;
+}
+
+#section{
+    background-color: white;
+    color: #787878;
+    border-radius: 5px;
+}
+
+#task,
+#section{
+    margin-top: 10px;
+    width: 60px;
+    height: 40px;
+    vertical-align: middle;
+}
+
+/* Main */
+
+.new-task{
+    margin-top: 20px;
+}
+
+h2{
+    display: inline;
+}
+
+.triangle-down{
+    font-size: 20px;
 }
