--- a/Css/Style.css
+++ b/Css/Style.css
@@ -107,5 +107,10 @@ li{
     width: 20px;
     height: 15px;
     padding: 3px;
-    background-color: dodgerblue;
+    color: white;
     border-radius: 5px;
+}
+
+.editorial{
+    background-color: dodgerblue;
+}
